Added essential commands for cProfile

--- a/HPC_Python_PRACE.ipynb
+++ b/HPC_Python_PRACE.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HPC_Python_PRACE.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMXff7s69oCfpaVZP4B91cr",
+      "authorship_tag": "ABX9TyOYx7BvdKUXemiCZ+Q0OHxI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -182,19 +182,14 @@
         "id": "N0WUioywQ1yg"
       },
       "source": [
-        "# 1. "
+        "1. python3 -m cProfile -o profile.dat main.py\n",
+        "2. python3 -m pstats profile.dat (opens an interactive session)\n",
+        "3. help \n",
+        "4. help stats\n",
+        "5. stats 10 \n",
+        "6. strip (removes path)\n",
+        "7. sort time"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "f-ThmWJ9Qydk"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
